deploy-scripts/kubernetes/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: $CIRCLE_PROJECT_REPONAME-deployment
spec:  # specification of desired behaviour of deployment
  selector:  # label selector for pods; must match pod template's labels
    matchLabels:
      app: jekyll-nginx
  template:  # pod definition
    metadata:
      labels:
        app: jekyll-nginx
    spec:  # specification of desired behaviour of pod
      containers:  # containers in pod
      - name: blog-jekyll-nginx
        image: $DOCKER_CONTAINER_REGISTRY/$GCLOUD_PROJECT/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1
        imagePullPolicy: Always
        ports:
        - containerPort: 80  # as per `EXPOSE 80` in Dockerfile
        - containerPort: 443  # as per `EXPOSE 443` in Dockerfile
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        readinessProbe:
          httpGet:
            path: /projects
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: nginx-config
        configMap:
          name: https-redirect
