deploy-scripts/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $CIRCLE_PROJECT_REPONAME-service
spec:  # defines behaviour of service
  selector:  # route service traffic to pod(s) with label keys and values matching this selector
    app: jekyll-nginx
  type:  NodePort  # determines how service is exposed
  ports:  # ports exposed by service
  - port: 12345  # exposed port
    targetPort: 80  # number or name of port to access on pod(s) targeted by service; matches `containerPort: 80` in deployment.yml
